--- a/settings.json
+++ b/settings.json
@@ -2,10 +2,10 @@
     "Top Bar": "<   Sample Library Sorter   >",
     "Prompt": "$ ",
     "Console Log Seperator": "  >>>--<>  ",
-    "Show More Console Logs": false,
+    "Show More Console Logs": true,
     "Show Top Bar": true,
     "Show Statistics": true,
-    "To Be Processed Directory": "Unsorted",
+    "To Be Processed Directory": "To Be Sorted",
     "Name Of Top Library Directory": "Sample Library",
     "Rejected Files": "Rejected Files",
     "Run Shell Command On Startup": true, 
