--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -32,8 +32,16 @@ jobs:
         pip install build
     - name: Build package
       run: python -m build
-    - name: Publish package
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+    - name: PyInstaller Windows
+      # You may pin to the exact commit or the version.
+      # uses: JackMcKew/pyinstaller-action-windows@a8dee21ad01bbc7e7363d445bb632691b95ba057
+      uses: JackMcKew/pyinstaller-action-windows@v0.1.2
       with:
-        user: nrdrch
-        password: ${{ pypi-AgEIcHlwaS5vcmcCJGJiYTBlYzQ4LTNjZjYtNDdmYi04NzI2LTBiMTVjZjM0M2YwZAACKlszLCIzMDZlMTg1YS0zMTFmLTQwOTQtYWIyMi01MTc2YjA5NDUyYTAiXQAABiBpEpc0m2JH-cPM97ibWmJjHMb0h7v6SE6ayy9EB2UVeA }}
+    # Directory containing source code (optional requirements.txt).
+        path: # default is src
+    # Specify a custom URL for PYPI
+        pypi_url: # optional, default is https://pypi.python.org/
+    # Specify a custom URL for PYPI Index
+        pypi_index_url: # optional, default is https://pypi.python.org/simple
+    # Specify a file path for .spec file
+        spec: # optional, default is 
