--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -40,8 +40,8 @@ jobs:
     # Directory containing source code (optional requirements.txt).
         path: src
     # Specify a custom URL for PYPI
-        pypi_url: optional, default is https://pypi.python.org/
+        pypi_url: https://pypi.python.org/
     # Specify a custom URL for PYPI Index
-        pypi_index_url: optional, default is https://pypi.python.org/simple
+        pypi_index_url: https://pypi.python.org/simple
     # Specify a file path for .spec file
-        spec: optional, default is 
+        #spec: optional, default is 
