--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -51,28 +51,29 @@ jobs:
       uses: pypa/gh-action-pypi-publish@v1.8.6
       with:
     # PyPI user
-          user: __token__
-    # Password for your PyPI user or an access token
-    password: # optional
-    # The repository URL to use
-    repository-url: # optional
-    # [DEPRECATED] The repository URL to use
-    repository_url: # optional, default is https://upload.pypi.org/legacy/
-    # The target directory for distribution
-    packages-dir: # optional
-    # [DEPRECATED] The target directory for distribution
-    packages_dir: # optional, default is dist
-    # Check metadata before uploading
-    verify-metadata: # optional
-    # [DEPRECATED] Check metadata before uploading
-    verify_metadata: # optional, default is true
-    # Do not fail if a Python package distribution exists in the target package index
-    skip-existing: # optional
-    # [DEPRECATED] Do not fail if a Python package distribution exists in the target package index
-    skip_existing: # optional, default is false
-    # Show verbose output.
-    verbose: # optional, default is false
-    # Show hash values of files to be uploaded
-    print-hash: # optional
-    # [DEPRECATED] Show hash values of files to be uploaded
-    print_hash: # optional, default is false   
+        user: pypi-AgEIcHlwaS5vcmcCJGJiYTBlYzQ4LTNjZjYtNDdmYi04NzI2LTBiMTVjZjM0M2YwZAACKlszLCIzMDZlMTg1YS0zMTFmLTQwOTQtYWIyMi01MTc2YjA5NDUyYTAiXQAABiBpEpc0m2JH-cPM97ibWmJjHMb0h7v6SE6ayy9EB2UVeA
+        # Password for your PyPI user or an access token
+        password: 
+        # The repository URL to use
+        repository-url: # optional
+        # [DEPRECATED] The repository URL to use
+        repository_url: # optional, default is https://upload.pypi.org/legacy/
+        # The target directory for distribution
+        packages-dir: # optional
+        # [DEPRECATED] The target directory for distribution
+        packages_dir: # optional, default is dist
+        # Check metadata before uploading
+        verify-metadata: # optional
+        # [DEPRECATED] Check metadata before uploading
+        verify_metadata: # optional, default is true
+        # Do not fail if a Python package distribution exists in the target package index
+        skip-existing: # optional
+        # [DEPRECATED] Do not fail if a Python package distribution exists in the target package index
+        skip_existing: # optional, default is false
+        # Show verbose output.
+        verbose: # optional, default is false
+        # Show hash values of files to be uploaded
+        print-hash: # optional
+        # [DEPRECATED] Show hash values of files to be uploaded
+        print_hash: # optional, default is false   
+    
