--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -18,7 +18,7 @@ permissions:
 jobs:
   deploy:
 
-    runs-on: windows
+    runs-on: x64
 
     steps:
     - uses: actions/checkout@v3
@@ -33,35 +33,35 @@ jobs:
     - name: Build package
       run: python -m build
 
-      run: 
+      
     - name: PyInstaller Windows
       # You may pin to the exact commit or the version.
       uses: JackMcKew/pyinstaller-action-windows@a8dee21ad01bbc7e7363d445bb632691b95ba057
       #uses: JackMcKew/pyinstaller-action-windows@v0.1.2
     # Directory containing source code (optional requirements.txt).
-        path: src
+      path: src
     # Specify a custom URL for PYPI
-        pypi_url: https://pypi.python.org/
+      pypi_url: https://pypi.python.org/
     # Specify a custom URL for PYPI Index
-        pypi_index_url: https://pypi.python.org/simple
+      pypi_index_url: https://pypi.python.org/simple
     # Specify a file path for .spec file
         #spec: optional, default is 
     - name: pypi-publish
-      run: 
+      run: twine upload -r testpypi dist/*
   # You may pin to the exact commit or the version.
   # uses: pypa/gh-action-pypi-publish@a56da0b891b3dc519c7ee3284aff1fad93cc8598
       uses: pypa/gh-action-pypi-publish@v1.8.6
       with: twine upload -r testpypi dist/*
     # PyPI user
-        user: __token__
+      user: __token__
         # Password for your PyPI user or an access token
-        password:   password = pypi-AgEIcHlwaS5vcmcCJDFjMGE2MWNiLWVmOTUtNGEzYy04MzM3LTlmZmVlMzcxNTNjMwACKlszLCIzMDZlMTg1YS0zMTFmLTQwOTQtYWIyMi01MTc2YjA5NDUyYTAiXQAABiBhkE_8JgnGpB8USF2rGuyBeFU1OgYjh1MYRs0qmISvPw
+      password:   password = pypi-AgEIcHlwaS5vcmcCJDFjMGE2MWNiLWVmOTUtNGEzYy04MzM3LTlmZmVlMzcxNTNjMwACKlszLCIzMDZlMTg1YS0zMTFmLTQwOTQtYWIyMi01MTc2YjA5NDUyYTAiXQAABiBhkE_8JgnGpB8USF2rGuyBeFU1OgYjh1MYRs0qmISvPw
         # The repository URL to use
         #repository-url: # optional
         # [DEPRECATED] The repository URL to use
-        repository_url: https://upload.pypi.org/legacy/
+        #repository_url: https://upload.pypi.org/legacy/
         # The target directory for distribution
-       packages-dir: src
+      packages-dir: src
        ## [DEPRECATED] The target directory for distribution
        #packages_dir: # optional, default is dist
        ## Check metadata before uploading
@@ -78,4 +78,4 @@ jobs:
        #print-hash: # optional
        ## [DEPRECATED] Show hash values of files to be uploaded
        #print_hash: # optional, default is false   
-       twine upload -r testpypi dist/*
+     
