--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -51,17 +51,16 @@ jobs:
   # You may pin to the exact commit or the version.
   # uses: pypa/gh-action-pypi-publish@a56da0b891b3dc519c7ee3284aff1fad93cc8598
       uses: pypa/gh-action-pypi-publish@v1.8.6
-      with: twine upload -r testpypi dist/*
-    # PyPI user
-      user: __token__
+         # PyPI user
+       user: __token__
         # Password for your PyPI user or an access token
-      password:   password = pypi-AgEIcHlwaS5vcmcCJDFjMGE2MWNiLWVmOTUtNGEzYy04MzM3LTlmZmVlMzcxNTNjMwACKlszLCIzMDZlMTg1YS0zMTFmLTQwOTQtYWIyMi01MTc2YjA5NDUyYTAiXQAABiBhkE_8JgnGpB8USF2rGuyBeFU1OgYjh1MYRs0qmISvPw
+       password:   password = pypi-AgEIcHlwaS5vcmcCJDFjMGE2MWNiLWVmOTUtNGEzYy04MzM3LTlmZmVlMzcxNTNjMwACKlszLCIzMDZlMTg1YS0zMTFmLTQwOTQtYWIyMi01MTc2YjA5NDUyYTAiXQAABiBhkE_8JgnGpB8USF2rGuyBeFU1OgYjh1MYRs0qmISvPw
         # The repository URL to use
         #repository-url: # optional
         # [DEPRECATED] The repository URL to use
         #repository_url: https://upload.pypi.org/legacy/
         # The target directory for distribution
-      packages-dir: src
+       #packages-dir: src
        ## [DEPRECATED] The target directory for distribution
        #packages_dir: # optional, default is dist
        ## Check metadata before uploading
