--- a/settings.json
+++ b/settings.json
@@ -4,14 +4,17 @@
     "Top Bar Color": "dark_grey",
     "Prompt": "$ ",
     "Console Log Seperator": "  >>>--<>  ",
-    "Show More Console Logs": false,
+    "Show More Console Logs": true,
     "Show Seperator": true,
     "Show Statistics": true,
     "Statistics Value Color": "light_cyan",
     "Max files per Dir": 50,
+    "TBPDPath": "Desktop",
     "To Be Processed Directory": "To Be Sorted",
+    "NOFLDPath": "Documents",
     "Name Of Top Library Directory": "Sample Library",
-    "Rejected Files": "Rejected Files",
+    "RFPath": "Desktop",
+    "Rejected Files": "Rejected Files Test",
     "Run Shell Command On Startup": false, 
     "Command On Startup": "cls"
 }
