--- a/settings.json
+++ b/settings.json
@@ -1,20 +1,22 @@
-{
+{   
+    "Foregroud Color 1": "white",
+    "Top Bar Color": "dark_grey",
     "Show Top Bar": true,
     "Top Bar": "<   Sample Library Sorter   >",
-    "Top Bar Color": "dark_grey",
+    "Prompt Color": "dark_grey",
     "Prompt": "$ ",
     "Console Log Seperator": "  >>>--<>  ",
     "Show More Console Logs": false,
     "Show Seperator": true,
     "Show Statistics": true,
-    "Statistics Value Color": "light_cyan",
+    "Statistics Value Color": "light_red",
     "Max files per Dir": 50,
     "TBPDPath": "Desktop",
     "To Be Processed Directory": "To Be Sorted",
-    "NOFLDPath": "Documents",
+    "NOFLDPath": "Desktop",
     "Name Of Top Library Directory": "Sample Library",
     "RFPath": "Desktop",
-    "Rejected Files": "Rejected Files Test",
+    "Rejected Files": "Rejected Files",
     "Run Shell Command On Startup": false, 
     "Command On Startup": "cls"
 }
