--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -9,9 +9,9 @@ build-backend = "setuptools.build_meta"
 [project]
 readme = "README.md"
 name = "slib-sorter"
+version = "1.1.9"
 requires-python = ">3.7"
-version = "1.1.0"
-description = "A Python library for sorting Sample Libraries"
+description = "A Python package for sorting Sample Libraries"
 license = "Apache-2.0"
 authors = ["Lukas Hübinger <fettkindasindauchoke@gmail.com>"]
 
