--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -9,11 +9,11 @@ build-backend = "setuptools.build_meta"
 [project]
 readme = "README.md"
 name = "slib-sorter"
-version = "1.2.6"
+version = "1.3.8"
 requires-python = ">3.7"
 description = "A Python package for sorting Sample Libraries"
 license = "Apache-2.0"
-authors = ["Lukas Hübinger <fettkindasindauchoke@gmail.com>"]
+authors = ["Lukas H <fettkindasindauchoke@gmail.com>"]
 
 [project.urls]
 homepage = "https://github.com/nrdrch/slib-sorter"
